feat: implement apps endpoints and structure
