# openapi_v2.yaml
@@ -72,7 +72,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/WebApp'
 
-  /{appId}:
+  /apps/{appId}:
     parameters:
     - name: appId
       in: path
@@ -133,7 +133,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /{appId}/reviews:
+  /reviews/{appId}:
     parameters:
     - name: appId
       in: path
